# MapReduceTorch

./: .gitignore  README.md  datasets.py  dockerfile  emr.tf  example.py  fargate.tf  logs.tf  network.tf  provider.tf  pyproject.toml  s3.tf  stepfunctions.tf
dask/: main.py
fillthegap/: example_dataset.txt  fill_in_the_blank.py
format/: main.py  main2.py  text_data.txt
pyspark/: main.py  main2.py  text_data.txt
resnet50/: doghotdogclassificationdataset.py  example.py
scraper/: main.py
src/: main.py
src/format/: main.py
src/scraper/: main.py
src/tests/: test_CustomDataset.py  test_pyspark.py
src/training/: script.py
src/validation/: test_data.txt
tests/: test_CustomDataset.py  test_model_training_function.py  test_pyspark.py
training/: main.py  script.py
validation/: validate_model.py
